--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "gulp-uglify": "^3.0.2",
         "postcss-assets": "^6.0.0",
         "sass": "^1.84.0"
+    },
+    "dependencies": {
+        "lozad": "^1.16.0"
     }
 }
